               more R like in the sense the output has the same lenght
               as the input length of the argument ‘measurement.date’.

         • ‘calc_Statistics()’

             • default setting of weights definition changed from 1/s
               to 1/s^2

         • ‘merge_Risoe.BINfileData()’

             • Confusing warning message corrected (#230, Thomas Kolb).

         • ‘plot_AbanicoPlot()’

             • zlim-definition bug removed,

             • automatic bandwidth adjustment implemented,

             • automatic z-axis scaling for zero scatter implemented,

             • qr (quartile range) set as default option for scatter
               polygon,

             • option cinn (confidence intervals) changed to pnn
               (percentiles),

             • summary content 'in confidence interval' changed to 'in
               2 sigma',

             • argument central.value renamed to z.0,

             • argument centrality removed,

             • argument bar.col added.

         • ‘plot_KDE()’

             • summary content 'in confidence interval' changed to 'in
               2 sigma'

         • ‘plot_RadialPlot()’

             • summary content 'in confidence interval' changed to 'in
               2 sigma'

         • ‘plot_RLum.Analysis()’

             • Fix an error that occurred for the argument combination
               ‘combine = TRUE’ and ‘RLum.Analysis’ objects that only
               contain one curve object of each type.

         • ‘plot_RLum.Data.Curve()’

             • NA-test implemented. Nothing is plotted if the curve
               contains NA-values (previous behaviour: function stopped
               with an error).

         • ‘readBIN2R()’

             • Implemnt new logical argument called ‘fastForward’. If
               ‘TRUE’ the output is no longer a ‘Risoe.BINfileData’
               object, but a list of ‘RLum.Analysis’ objects.  This