@@ -62,7 +62,7 @@ The information from the slot 'recordType' is taken from the first
 'curveType' is filled with the name \code{merged}.
 }
 \section{Function version}{
- 0.1 (2015-07-23 17:09:29)
+ 0.1.1 (2015-08-05 22:45:12)
 }
 \examples{
 ##load example data
